# fit

./: .gitignore  .pre-commit-config.yaml  README.md
backend/: 1.py  main.py  pyproject.toml  settings.py
backend/alembic/: env.py
backend/api/: __init__.py
backend/api/v1/: calories_calc.py  dependencies.py
backend/api/v1/users/: users.py
backend/database/: __init__.py  session.py  unit_of_work.py
backend/models/: __init__.py
backend/models/users_access/: user.py
backend/repositories/: users.py
backend/schemas/: __init__.py  users.py
backend/schemas/auth/: users.py
backend/usecases/users/: create_user.py
