[tool.poetry]
name = "fit"
version = "0.1.0"
description = ""
authors = ["stas <stanislav.m@softmus.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.8"
uvicorn = "^0.34.0"
alembic = "^1.14.1"
pydantic-settings = "^2.8.0"
pre-commit = "^4.1.0"
python-jose = "^3.4.0"
bcrypt = "4.0.1"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
